--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^6.3.3",
     "mongodb": "^4.5.0",
     "next": "12.1.5",
     "react": "18.0.0",
